# obs-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  IMPROVEMENTS_SUMMARY.md  INSTALL.md  MIGRATION_GUIDE.md  README.md  STRATEGIC_ARCHITECTURE.md  WEBSOCKET_IMPROVEMENTS.md  beautiful_setup.py  beautiful_tour.py  go_live.py  live_stream_setup.py  mypy.ini  pyproject.toml  quick_programming_setup.py  requirements-chat-intelligence.txt  requirements-dev.txt  requirements.txt  requirements_crew.txt  run_programming_stream.py  setup.py  stop_stream.py  stream_commander.py  test_events_only.py  test_events_standalone.py  test_events_system.py  test_improvements.py  test_what_if.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: chat_intelligence.env.example
docs/: CHAT_INTELLIGENCE.md  OBS_SETUP_GUIDE.md  README_CREW.md
examples/: README.md  automation_demos.py  automation_getting_started.py  automation_scripts.py  chat_intelligence_demo.py  event_sourcing_demo.py  examples.py  improved_example.py  programming_stream.py  simple_websocket_events.py  streaming_setup_automation.py  websocket_events_demo.py
examples/demos/: awesome_demo.py  demo.py  run_demo.py
scripts/: type_check.py
src/: __init__.py
src/crew/: __init__.py  chat_intelligence_agents.py  chat_intelligence_integration.py  chat_intelligence_tools.py  obs_crew_agents.py  obs_crew_examples.py  obs_crew_tools.py
src/obs_agent/: __init__.py  __version__.py  actions.py  advanced_features.py  automation.py  chat_intelligence.py  config.py  connection.py  events.py  exceptions.py  logging.py  obs_agent.py  obs_agent_v2.py  py.typed  typed_obs_agent.py  validation.py
src/obs_agent/events/: __init__.py  cqrs.py  domain.py  integration.py  projections.py  store.py  time_travel.py
src/obs_agent/types/: __init__.py  api_responses.py  base.py  config.py  events.py  generics.py  sources.py
src/tools/: __init__.py  obs_ai_agent.py
tests/: conftest.py  test_obs.py
tests/unit/: test_config.py  test_event_sourcing.py  test_exceptions.py  test_validation.py
